--- a/h07/style.css
+++ b/h07/style.css
@@ -6,6 +6,7 @@ body {
     margin: 0px;
     padding: 0px;
     font-family: 'Raleway', sans-serif;
+background-color: rgb(255,255,255);
 }
 
 div#wrapper {
@@ -14,6 +15,7 @@ div#wrapper {
 
 header {
     background-color: rgb(192, 240, 233);
+    text-align: center;
 }
 
 img#logo {
@@ -99,6 +101,7 @@ article:nth-child(even) {
 @media all and (min-width: 1200px) {
     div#wrapper {
         width: 1200px;
+        margin: auto;
     }
 }
 
